--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -64,7 +64,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install test dependencies.
-        run: pip3 install ansible molecule[docker] docker ansible-lint[yamllint]
+        run: pip3 install ansible molecule[docker] docker ansible-lint[yamllint] netaddr
 
       - name: Run Molecule tests.
         run: molecule test
