--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,3 +1,3 @@
 ---
 
-_container_types: ['docker', 'podman', 'lxc', 'containerd']
+_container_types: ['docker', 'podman', 'lxc', 'containerd', 'container']
