--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,22 +14,17 @@ galaxy_info:
       versions:
         - '9'
         - '8'
-        - '7'
     - name: Fedora
       versions:
-        - '38'
-        - '37'
-        - '36'
-        - '35'
+        - '39'
     - name: Ubuntu
       versions:
         - jammy
         - focal
-        - bionic
     - name: Debian
       versions:
+        - bookworm
         - bullseye
-        - buster
 
   galaxy_tags:
     - hostname
