Fixing become statements

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,6 +25,7 @@
   loop: "{{ hostname_hosts }}"
 
 - name: Set hostname
+  become: yes
   vars:
     # Containers are complicated.
     not_container: "{{ false if ansible_virtualization_type in _container_types else true }}"
@@ -35,6 +36,7 @@
 # Updating /etc/hosts is not supported in containers
 # https://github.com/moby/moby/issues/22281
 - name: Update /etc/hosts
+  become: yes
   when: ansible_virtualization_type not in _container_types
   block:
     - name: Update /etc/hosts entry for 127.0.1.1 if required
@@ -57,3 +59,4 @@
         owner: root
         group: root
       loop: "{{ hostname_hosts }}"
+  become: yes
