--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -59,4 +59,5 @@
         owner: root
         group: root
       loop: "{{ hostname_hosts }}"
+      when: hostname_hosts is defined
   become: yes
